--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <H1>Odin Recipes</H1>
 
+    <img src="./images/tasty.gif" alt="Mr. Bean approves">
+
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/goodOldFhasionedPancakes.html">Good Old Fashioned Pancakes</a></li>
