--- a/recipes/easy-meatloaf.html
+++ b/recipes/easy-meatloaf.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Easy Meatloaf/title>
+    <title>Easy Meatloaf</title>
 </head>
 <body>
     <h1>Easy Meatloaf</h1>
 
-    <img src="../images/easy-meatloaf.jpg" alt="easy meatloaf">
+    <img src="../images/easy-meatloaf.jpg" alt="easy meatloaf" width="800">
 
     <h2>Ingredients</h2>
     <ul>
