--- a/recipes/goodOldFhasionedPancakes.html
+++ b/recipes/goodOldFhasionedPancakes.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Good Old Fashioned Pancakes</h1>
 
-    <img src="../images/good-old-fashioned-pancakes.jpg" alt="good old fashionable pancakes">
+    <img src="../images/good-old-fashioned-pancakes.jpg" alt="good old fashionable pancakes" width="800">
     
     <h2>Ingredients</h2>
 
